# pulumi-oci

./: .ci-mgmt.yaml  .gitignore  .gitmodules  .golangci.yml  .goreleaser.prerelease.yml  .goreleaser.yml  .upgrade-config.yml  Makefile  README.md  go.work  go.work.sum  mise.toml  upgrade-config.yml
sdk/python/: Pulumi.yaml  README.md  pyproject.toml  setup.py
sdk/python/pulumi_oci/: README.md  __init__.py  provider.py
sdk/python/pulumi_oci/adm/: __init__.py  _inputs.py  get_knowledgebase.py  get_knowledgebases.py  get_remediation_recipe.py  get_remediation_recipes.py  get_remediation_run.py  get_remediation_run_application_dependency_recommendations.py  get_remediation_run_stage.py  get_remediation_run_stages.py  get_remediation_runs.py  get_vulnerability_audit.py  get_vulnerability_audit_application_dependency_vulnerabilities.py  get_vulnerability_audit_application_dependency_vulnerability.py  get_vulnerability_audit_vulnerability.py  get_vulnerability_audits.py  knowledge_base.py  outputs.py  remediation_recipe.py  remediation_run.py  vulnerability_audit.py
sdk/python/pulumi_oci/aianomalydetection/: __init__.py  _inputs.py  ai_private_endpoint.py  data_asset.py  detect_anomaly_job.py  get_ai_private_endpoint.py  get_ai_private_endpoints.py  get_detect_anomaly_job.py  get_detect_anomaly_jobs.py  get_detection_data_asset.py  get_detection_data_assets.py  get_detection_model.py  get_detection_models.py  get_detection_project.py  get_detection_projects.py  model.py  outputs.py  project.py
sdk/python/pulumi_oci/aidocument/: __init__.py  _inputs.py  get_model.py  get_model_type.py  get_models.py  get_processor_job.py  get_project.py  get_projects.py  model.py  (+3 more)
(+69633 files in other folders)
