[project]
  name = "pulumi_oci"
  description = "A Pulumi package for creating and managing Oracle Cloud Infrastructure resources."
  dependencies = ["parver>=0.2.1", "pulumi>=3.165.0,<4.0.0", "semver>=2.8.1", "typing-extensions>=4.11,<5; python_version < \"3.11\""]
  keywords = ["pulumi", "oci", "oracle", "category/cloud"]
  readme = "README.md"
  requires-python = ">=3.9"
  version = "4.0.0a0+dev"
  [project.license]
    text = "Apache-2.0"
  [project.urls]
    Homepage = "https://www.pulumi.com"
    Repository = "https://github.com/pulumi/pulumi-oci"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumi_oci = ["py.typed", "pulumi-plugin.json"]
